--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -45,7 +45,7 @@ if (get_option('permalink_structure') == '') {
                         <input id="upload_default_screenshot" type="text" size="60" name="upload_default_screenshot" value="<?php echo esc_attr($default_screenshot); ?>" />
                         <input id="upload_default_screenshot_button" type="button" value="Upload Image" />
                         <br />Enter an URL or upload an image (Size: H: 220px W: 720px)<br />
-                        <img id="upload_default_screenshot_img" src="<?php echo esc_url($default_screenshot); ?>" width="720" height="220" />
+                        <img id="upload_default_screenshot_img" src="<?php echo esc_url($default_screenshot); ?>" width="720" height="220" alt="Screenshot" />
                     </label></td>
             </tr>
             <tr valign="top">
