--- a/views/frontend/cmdownload/add.phtml
+++ b/views/frontend/cmdownload/add.phtml
@@ -1,13 +1,10 @@
 <div class="CMDM">
-<style>
-    .wp-editor-tools {display:none}
-</style>
 <div class="CMDM-edit-form">
 <?php
 echo $form;
 ?>
 </div>
-<script>
+<script type="text/javascript">
 jQuery(document).ready(function() {
     setUserSetting('editor', 'tinymce');
 })
