--- a/views/frontend/cmdownload/meta/download-form.phtml
+++ b/views/frontend/cmdownload/meta/download-form.phtml
@@ -1,4 +1,4 @@
-<script>
+<script type="text/javascript">
     jQuery(document).ready(function($) {
         $('.downloadBut').click(function(e) {
             e.preventDefault();
