--- a/views/frontend/cmdownload/meta/rating.phtml
+++ b/views/frontend/cmdownload/meta/rating.phtml
@@ -9,7 +9,7 @@
             <?php endfor; ?>
         </fieldset>
       ​</form>
-<script>
+<script type="text/javascript">
 jQuery(document).ready(function($) {
     $('.CMDM-rating input[type=radio]').click(function() {
         var val = $(this).val();
