--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -15,6 +15,8 @@ if (get_option('permalink_structure') == '') {
 
 ?>
 
+<?php include 'sharebox.phtml'; ?>
+
     <h3>Upgrade to Pro</h3>
     <table>
         <tr>
@@ -56,6 +58,15 @@ if (get_option('permalink_structure') == '') {
                 <th scope="row" valign="middle" align="left" >Add "My Downloads" (<a href="<?php echo home_url('/cmdownload/dashboard/'); ?>">/cmdownload/dashboard</a>) to site menu?:</th>
                 <td ><input type="checkbox" name="add_dashboard_menu" value="1" <?php checked($add_dashboard_menu); ?>/><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
             </tr>
+            <tr valign="top">
+		        <th scope="row" valign="top" align="left" >Force browser to download files:</th>
+		        <td ><input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_0" value="0" <?php
+				if( !$forceBrowserDownload ) echo 'checked="checked"';
+				?>/><label for="forceBrowserDownload_0"> No</label> &nbsp; <input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_1" value="1" <?php
+		        if( $forceBrowserDownload ) echo 'checked="checked"';
+		        ?>/><label for="forceBrowserDownload_1"> Yes</label></td>
+		        <td>If disabled, browser will open some file types instead of downloading it, for example PDF and images.</td>
+		    </tr>
 
         </table>
         <h3>Notification Settings:</h3>
