--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -2,7 +2,14 @@
     <br />
     <h1><strong>CM Download Manager Pro </strong></h1>
     <p><strong>A Pro version of CM Downloads is <a href="http://downloadsmanager.cminds.com"  target="new">available here</a></strong></p>
-    <h2>Features (Pro Version Only)</h2>
+ 
+<br><br>
+<h1><strong>Video Demo </strong></h1>
+<iframe width="427" height="240" src="http://www.youtube.com/embed/XyusVTlavxo?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="427" height="240" src="http://www.youtube.com/embed/eyims93g8ck?rel=0" frameborder="0" allowfullscreen></iframe>
+
+
+ <h2>Features (Pro Version Only)</h2>
     <!--TODO-->
  <div style="height:10px;"></div>
 <h4>General Features & Customization</h4>
@@ -11,7 +18,7 @@
 <li><strong>Second level Categories</strong>- Support for second level category browsing</li>
 <li><strong>Multisite</strong>- Supports multisite.</li>
 <li><strong>Localization Support</strong> - Frontend (user side) is localized</li>
-<li><strong>Custom CSS</strong> – Ability to inject and control plugin CSS from plugin settings</li>
+<li><strong>Custom CSS</strong> - Ability to inject and control plugin CSS from plugin settings</li>
 <li><strong>Gratitude Message</strong> - Does not include the CMinds Gratitude message in the footer.</li>
 <li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to a user defined directory. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99E.png">Image from Settings</a>)</li>
 <li><strong>Disclaimer</strong> - Adds an option to show a disclaimer to first time users. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99A.png">Image from Settings</a>), (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99B.png">Image from site</a>)</li>
@@ -34,9 +41,9 @@
 <ul>
 <li><strong>Downloads Shortcodes</strong>- Integrate specific download in every page or post in site (<a href="https://www.cminds.com/example-of-downloads-manager-integration-in-posts-and-pages/">View Demo</a>)</li>
 <li><strong>Shortcodes/Widgets</strong>- Generates top level contributors list, recent updates, and in most cases, a download items list.
-<li><strong>Frequent Contributors</strong> - CMDM-frequent-contributors Cat="category-name" sort="Asc/Desc" count="5" "  (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)</li>
-<li><strong>Downloads List</strong> - CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5" "  (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)</li>	
-<li><strong>Related Downloads</strong> - CMDM-related-downloads Cat="category-name" sort="Asc/Desc" count="5" "  (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)</li>	
+<li><strong>Frequent Contributors</strong> - CMDM-frequent-contributors Cat="category-name" sort="Asc/Desc" count="5"(<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)</li>
+<li><strong>Downloads List</strong> - CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5"(<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)</li>	
+<li><strong>Related Downloads</strong> - CMDM-related-downloads Cat="category-name" sort="Asc/Desc" count="5"(<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)</li>	
 <li><strong>Related Downloads</strong>- Show Related downloads on the Download page. (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-45-53.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</li>
 </ul>
 
@@ -49,7 +56,7 @@
 <li><strong>View Count</strong> - Shows view count for each download and lets you control how the view count is tabulated (by view or by session) (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99F.png">Image from Settings</a>), (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99G.png">Image from Downloads edit screen</a>)</li>
 <li><strong>Slide Show</strong> - Ability to turn off the slide show. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99C.png">Image from Settings</a>)</li>
 <li><strong>Downloads Index Views</strong> - Option to toggle between a list view, tiles view and category view of your downloads. (<a href="http://www.cminds.com/cmdownloads/">View Demo</a>)</li>
-<li><strong>Social Share</strong> – Includes a social share widget in the question page. (<a href="http://www.cminds.com/cmdownloads/mp3-audio-example/">View Demo - Widget on the right</a>)</li>
+<li><strong>Social Share</strong> - Includes a social share widget in the question page. (<a href="http://www.cminds.com/cmdownloads/mp3-audio-example/">View Demo - Widget on the right</a>)</li>
 </ul>
 
 <div style="height:10px;"></div>
