--- a/views/frontend/cmdownload/thread.phtml
+++ b/views/frontend/cmdownload/thread.phtml
@@ -151,7 +151,11 @@ if( have_posts() ):
         endwhile;
     endif;
     ?>
-    <span class="cmdm_poweredby"><a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a></span>
+    <span class="cmdm_poweredby">
+       	<a href="http://cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress</a>
+       	<a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">Plugin</a>
+      	<a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a>
+    </span>
 </div>
 <?php
 get_footer();
