--- a/views/frontend/cmdownload/index.phtml
+++ b/views/frontend/cmdownload/index.phtml
@@ -129,7 +129,11 @@ get_header();
             <div class="clear"></div>
         </div>
         <!--/main -->
-        <span class="cmdm_poweredby"><a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a></span>
+        <span class="cmdm_poweredby">
+          	<a href="http://cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress</a>
+          	<a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">Plugin</a>
+         	<a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a>
+        </span>
         <div class="clear"></div>
     </div>
 </div>
