--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -73,8 +73,9 @@ if( have_posts() ):
     endif;
     ?>
     <span class="cmdm_poweredby">
-        <a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress Plugins</a>
-        <a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a>
+       	<a href="http://cminds.com/" target="_blank" class="cmdm_poweredbylink">CreativeMinds WordPress</a>
+       	<a href="http://plugins.cminds.com/" target="_blank" class="cmdm_poweredbylink">Plugin</a>
+       	<a href="http://downloadsmanager.cminds.com" target="_blank" class="cmdm_poweredbylink">CM Downloads Manager</a>
     </span>
 </div><?php
 if( !isset($_GET['ajax']) ) get_footer();
