--- a/views/frontend/cmdownload/meta/categories.phtml
+++ b/views/frontend/cmdownload/meta/categories.phtml
@@ -1,7 +1,7 @@
 <?php if (!empty($categories)): ?>
 <h3>Categories: 
     <?php foreach ($categories as $id=>$name) {
-        $links[] = '<a href="'.get_term_link($id, $taxonomy).'">'.$name.'</a>';
+        $links[] = '<a href="'.esc_attr(get_term_link($id, $taxonomy)).'">'.$name.'</a>';
     }
     echo implode(' | ', $links);
     ?>
