--- a/views/frontend/cmdownload/dashboard.phtml
+++ b/views/frontend/cmdownload/dashboard.phtml
@@ -3,7 +3,7 @@
     <thead>
 	<tr>
 	<th colspan=4>
-	&nbsp;&nbsp;<a href="<?php echo CMDM_get_url('cmdownload', 'add'); ?>" class="CMDM-add"><?php _e('Add new', 'cm-download-manager'); ?></a>
+	&nbsp;&nbsp;<a href="<?php echo esc_attr(CMDM_get_url('cmdownload', 'add')); ?>" class="CMDM-add"><?php _e('Add new', 'cm-download-manager'); ?></a>
 	</th>
 	</tr>
 	<tr>
@@ -34,9 +34,11 @@
                     $actionLabel = __('Publish', 'cm-download-manager');
                 }
                 ?>
-                <td><a href="<?php echo CMDM_get_url('cmdownload', $action, array('id'=>$download->getId())); ?>"><?php echo $actionLabel; ?></a> | 
-                    <a href="<?php echo CMDM_get_url('cmdownload', 'edit', array('id'=>$download->getId())); ?>"><?php _e('Edit', 'cm-download-manager'); ?></a> | 
-                    <a href="<?php echo CMDM_get_url('cmdownload', 'del', array('id'=>$download->getId())); ?>" onclick="if (!confirm('<?php _e('Are you sure you want to delete?', 'cm-download-manager'); ?>')) {return false;}"><?php _e('Delete', 'cm-download-manager'); ?></a>
+                <td><a href="<?php echo esc_attr(CMDM_get_url('cmdownload', $action, array('id'=>$download->getId()))); ?>"><?php echo $actionLabel; ?></a> | 
+                    <a href="<?php echo esc_attr(CMDM_get_url('cmdownload', 'edit', array('id'=>$download->getId()))); ?>"><?php _e('Edit', 'cm-download-manager'); ?></a> | 
+                    <a href="<?php echo esc_attr(CMDM_get_url('cmdownload', 'del', array('id'=>$download->getId())));
+                    	?>" onclick="return confirm(<?php echo esc_attr(json_encode(__('Are you sure you want to delete?', 'cm-download-manager'))); ?>)"><?php
+                    	_e('Delete', 'cm-download-manager'); ?></a>
                 </td>
             </tr>
                 <?php
