--- a/views/frontend/cmdownload/meta/menu-item.phtml
+++ b/views/frontend/cmdownload/meta/menu-item.phtml
@@ -1,2 +1,2 @@
-<?php if (!empty($dashboardUrl)): ?><li class="home"><a href="<?php echo $dashboardUrl; ?>"><?php _e('My Downloads', 'cm-download-manager'); ?></a></li><?php endif; ?>
-<?php if (!empty($categoriesUrl)): ?><li class="home"><a href="<?php echo $categoriesUrl; ?>"><?php _e('Downloads', 'cm-download-manager'); ?></a></li><?php endif; ?>
+<?php if (!empty($dashboardUrl)): ?><li class="home"><a href="<?php echo esc_attr($dashboardUrl); ?>"><?php _e('My Downloads', 'cm-download-manager'); ?></a></li><?php endif; ?>
+<?php if (!empty($categoriesUrl)): ?><li class="home"><a href="<?php echo esc_attr($categoriesUrl); ?>"><?php _e('Downloads', 'cm-download-manager'); ?></a></li><?php endif; ?>
