--- a/views/frontend/cmdownload/meta/support-thread-list.phtml
+++ b/views/frontend/cmdownload/meta/support-thread-list.phtml
@@ -4,7 +4,8 @@ if (!empty($items)) {
     foreach ($items as $comment) {
         ?>
         <tr>
-            <td><a class="topicLink" href="<?php echo get_permalink($comment['post_id']) . '/topic/' . $comment['thread_id']; ?>"><?php if ($comment['resolved']): ?>[<?php _e('RESOLVED', 'cm-download-manager'); ?>] <?php endif; ?><?php echo $comment['title']; ?></a></td>
+            <td><a class="topicLink" href="<?php echo esc_attr(get_permalink($comment['post_id']) . '/topic/' . $comment['thread_id']); ?>"><?php
+            	if ($comment['resolved']): ?>[<?php _e('RESOLVED', 'cm-download-manager'); ?>] <?php endif; ?><?php echo $comment['title']; ?></a></td>
             <td><?php echo $comment['counter']; ?></td>
             <td><?php echo $comment['lastPoster']; ?></td>
             <td><?php echo CMDM_SupportThread::renderDaysAgo($comment['lastUpdate'], true); ?>
