--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -10,7 +10,8 @@ if( have_posts() ):
         ?>
             <div class="CMDM-app">
                 <div class="rating"><?php do_action('CMDM_show_rating', get_the_id()); ?></div>
-                <div class="backtolib"><a href="<?php echo home_url('/cmdownloads'); ?>">&laquo;&nbsp;<?php _e('Back to All Downloads', 'cm-download-manager'); ?></a></div>
+                <div class="backtolib"><a href="<?php echo esc_attr(home_url('/cmdownloads')); ?>">&laquo;&nbsp;<?php
+                	_e('Back to All Downloads', 'cm-download-manager'); ?></a></div>
                 <h2><?php the_title(); ?></h2>
                 <!--/h2 -->
                 <div class="main">
@@ -24,12 +25,13 @@ if( have_posts() ):
                                 if( !empty($screenshots) ):
                                     foreach($screenshots as $screenshot):
                                         ?>
-                                        <div> <img src="<?php echo CMDM_get_url('cmdownload', 'screenshot', array('size' => '720x220', 'img' => $screenshot)); ?>" height="220" /> </div>
+                                        <div> <img src="<?php echo esc_attr(CMDM_get_url('cmdownload', 'screenshot', array('size' => '720x220', 'img' => $screenshot)));
+                                        	?>" height="220" /> </div>
                                         <?php
                                     endforeach;
                                 else:
                                     ?>
-                                    <div> <img src="<?php echo CMDM_get_default_screenshot(); ?>" height="220" width="720" alt="Screenshot" /> </div>
+                                    <div> <img src="<?php echo esc_attr(CMDM_get_default_screenshot()); ?>" height="220" width="720" alt="Screenshot" /> </div>
                                 <?php
                                 endif;
                                 ?>
