--- a/views/frontend/cmdownload/widget/search.phtml
+++ b/views/frontend/cmdownload/widget/search.phtml
@@ -1,6 +1,6 @@
-<form role="search" method="get" id="CMDM_searchform" action="<?php echo $searchAction; ?>" >
+<form role="search" method="get" id="CMDM_searchform" action="<?php echo esc_attr($searchAction); ?>" >
     <fieldset class="searchAddOns">
-        <input name="search" type="text" value="<?php echo $searchQuery; ?>" id="CMDM_s" placeholder="<?php echo $placeholder; ?>" />
+        <input name="search" type="text" value="<?php echo esc_attr($searchQuery); ?>" id="CMDM_s" placeholder="<?php echo esc_attr($placeholder); ?>" />
         <input type="submit" value="" />
     </fieldset>
 </form>
