--- a/views/frontend/cmdownload/meta/rating.phtml
+++ b/views/frontend/cmdownload/meta/rating.phtml
@@ -11,6 +11,7 @@
                 	echo esc_attr(sprintf(__('%d Stars', 'cm-download-manager'), $i)); ?>"><?php
                 	printf(__('%d Stars', 'cm-download-manager'), $i); ?></label>
             <?php endfor; ?>
+            <input type="hidden" name="nonce" value="<?php echo esc_attr(wp_create_nonce('cmdm_rate')); ?>" />
         </fieldset>
       ​</form>
 <script type="text/javascript">
@@ -19,7 +20,7 @@ jQuery(document).ready(function($) {
         var val = $(this).val();
         var form = $('#CMDM_rating_form');
         $.post(form.attr('action'),
-        {rating:val},
+        form.serialize(),
         function(data) {
             $('#CMDM_rating_counter').text(data.ratingCounter);
             $('.CMDM-rating input[type=radio]').removeAttr('checked').attr('disabled', 'disabled');
