--- a/views/backend/about.phtml
+++ b/views/backend/about.phtml
@@ -1,6 +1,9 @@
 <p>This plugin was developed by <a href="http://plugins.cminds.com/" target="new">CreativeMinds</a>.</p>
 <p>You can find more information about CM Download Manager <a href="http://downloadmanager.cminds.com" target="new">here</a>.</p>
 
+<h3><strong>Video Demo</strong></h3>
+<iframe width="560" height="315" src="//www.youtube.com/embed/IZNX9zmz4rM" frameborder="0" allowfullscreen></iframe>
+
 <h3>Premium Plugins by CreativeMinds</h3>
 <div><iframe src="<?php echo esc_attr($iframeURL) ?>" height="700" style="width: 100%" ></iframe></div>
 
