--- a/views/backend/sharebox.phtml
+++ b/views/backend/sharebox.phtml
@@ -4,6 +4,7 @@ $twitterTweet = rawurlencode('Checkout the CM Download Manager ( http://wordpres
 ?>
 
 <div class="cminds_call_to_action">
+	<div id="fb-root"></div>
     <div class="inner_box">
         <h3>Share your Appreciation</h3>
         <a target="_blank" href="<?php echo esc_attr($pluginReviewLink); ?>">
@@ -41,6 +42,37 @@ $twitterTweet = rawurlencode('Checkout the CM Download Manager ( http://wordpres
                 s.parentNode.insertBefore(po, s);
             })();
         </script>
+        
+        <script>(function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id))
+                    return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+
+        <div class="fb-like" data-href="https://www.facebook.com/cmplugins" data-width="100" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+
+        <br/>
+
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+            <form action="//cminds.us3.list-manage.com/subscribe/post?u=f48254f757fafba2669ae5918&amp;id=142732cbf9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <h3 for="mce-EMAIL">CM Newsletter - coupons, deals, news</h3>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn button">
+                    <span style="display:inline-block; position: relative"><div class="cmtt_field_help" title="We only send newsletters a couple of times a year. They include great deals, promo codes and information about our new plugins!"></div></span>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk fsorm bot signups-->
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_f48254f757fafba2669ae5918_142732cbf9" tabindex="-1" value=""></div>
+                    <div class="clear"></div>
+                </div>
+            </form>
+        </div>
+        <!--End mc_embed_signup-->
+        
     </div>
     
     <div class="clear"></div>
@@ -69,4 +101,6 @@ div.cminds_settings_description{
     float: left;
     max-width: 55%;
 }
+#mc_embed_signup{clear:left; width:400px;}
+.fb_iframe_widget{vertical-align: top;line-height: 2em;}
 </style>
