--- a/views/backend/sharebox.phtml
+++ b/views/backend/sharebox.phtml
@@ -82,11 +82,11 @@ $twitterTweet = rawurlencode('Checkout the CM Download Manager ( http://wordpres
 div.cminds_call_to_action{
     display: flex;
     float: right;
-    margin: 0 0 2em 2em;
+    margin: 0;
 }
 
 div.cminds_call_to_action .inner_box{
-    border: 1px solid #999;
+    border: 1px solid #e0e0e0;
     padding: 0 0.5em 0.5em;
     margin: 0 auto;
     min-width: 290px;
