--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -1,3 +1,6 @@
+<?php include 'sharebox.phtml'; ?>
+<?php include 'upgrade.phtml'; ?>
+
 <div class="clear">
     <?php
     if(!empty($messages)):
@@ -16,92 +19,110 @@ if (get_option('permalink_structure') == '') {
 
 ?>
 
-<?php include 'sharebox.phtml'; ?>
-
-<p>Link to downloads frontend list: <a href="<?php $url = CMDM_BaseController::getUrl('cmdownloads', 'index');
-	echo esc_attr($url); ?>"><?php echo esc_html($url); ?></a></p>
-
-    <h3>Upgrade to Pro</h3>
-    <table>
-        <tr>
-            <td style="min-width:200px;"><strong>Pro Version</strong></td>
-            <td style="min-width:200px;"><p><strong><a href="http://downloadsmanager.cminds.com" target="new">Upgrade</a></p></td>
-            <td bgcolor="#CCFFCC"> Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior, adding login support from social networks, password protection and a lot more</td>
-        </tr>
-    </table>
-    <form method="post" enctype="multipart/form-data">
-        <h3>General Settings:</h3>
-        <table>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Downloads listing title:</th>
-                <td ><input type="text" size="60" name="addons_title" value="<?php echo esc_attr($addons_title); ?>" /></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Search placeholder text:</th>
-                <td ><input type="text" size="60" name="search_placeholder_text" value="<?php echo esc_attr($searchPlaceholder); ?>" /></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Allowed file extensions (separate with comma):</th>
-                <td ><input type="text" size="60" name="allowed_extensions" value="<?php echo esc_attr(implode(',', $allowed_extensions)); ?>" /></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" align="left">"No screenshot" image:</th>
-                <td><label for="upload_default_screenshot">
-
-                        <input id="upload_default_screenshot" type="text" size="60" name="upload_default_screenshot" value="<?php echo esc_attr($default_screenshot); ?>" />
-                        <input id="upload_default_screenshot_button" type="button" value="Upload Image" />
-                        <br />Enter an URL or upload an image (Size: H: 220px W: 720px)<br />
-                        <img id="upload_default_screenshot_img" src="<?php echo esc_attr($default_screenshot); ?>" width="720" height="220" alt="Screenshot" />
-                    </label></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Add "Downloads" (<a href="<?php echo esc_attr(home_url('/cmdownloads/')); ?>">/cmdownloads</a>) to site menu?:</th>
-                <td ><input type="checkbox" name="add_addons_menu" value="1" <?php checked($add_addons_menu); ?>/><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Add "My Downloads" (<a href="<?php echo esc_attr(home_url('/cmdownload/dashboard/')); ?>">/cmdownload/dashboard</a>) to site menu?:</th>
-                <td ><input type="checkbox" name="add_dashboard_menu" value="1" <?php checked($add_dashboard_menu); ?>/><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
-            </tr>
-            <tr valign="top">
-		        <th scope="row" valign="top" align="left" >Force browser to download files:</th>
-		        <td ><input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_0" value="0" <?php
-				if( !$forceBrowserDownload ) echo 'checked="checked"';
-				?>/><label for="forceBrowserDownload_0"> No</label> &nbsp; <input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_1" value="1" <?php
-		        if( $forceBrowserDownload ) echo 'checked="checked"';
-		        ?>/><label for="forceBrowserDownload_1"> Yes</label></td>
-		        <td>If disabled, browser will open some file types instead of downloading it, for example PDF and images.</td>
-		    </tr>
-
-        </table>
-        <h3>Notification Settings:</h3>
-        <table>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >New topic notification title:</th>
-                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNewNotificationTitle); ?>" /></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="top" align="left" >New topic notification message:</th>
-                <td ><textarea cols="60" rows="5" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION; ?>"><?php echo $threadNewNotification; ?></textarea></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Topic comment notification title:</th>
-                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNotificationTitle); ?>" /></td>
-            </tr>
-            <tr valign="top">
-                <th scope="row" valign="top" align="left" >Topic comment notification message:</th>
-                <td ><textarea cols="60" rows="5" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION; ?>"><?php echo $threadNotification; ?></textarea></td>
-            </tr>
-        </table>
-        <h3>Panel Titles:</h3>
-
-        <table>
-            <?php foreach(self::$_titles as $key => $value): ?>
-                <tr valign="top">
-                    <th scope="row" valign="middle" align="left" style="border-bottom:solid 1px #ccc"><?php echo $key; ?></th>
-                    <td style="border-bottom:solid 1px #ccc"><input type="text" size="60" name="titles[<?php echo esc_attr($key); ?>]" value="<?php echo esc_attr($value); ?>" /></td>
-                </tr><?php endforeach; ?>
-        </table>
+<form method="post" enctype="multipart/form-data" id="settings">
+	<ul class="cma-settings-tabs">
+		<li><a href="#tab-general">General</a>
+		<li><a href="#tab-notifications">Notifications</a>
+		<li><a href="#tab-panel-titles">Panel Titles</a>
+	</ul>
+	<div class="inner">
+		<div class="settings-category settings-category-general">
+		    <table><tbody>
+		    	<tr>
+	                   <th scope="row" class="option-title"><strong>Link to downloads frontend list:</strong></th>
+	                   <td class="option-controls"><a href="<?php $url = CMDM_BaseController::getUrl('cmdownloads', 'index');
+	                   		echo esc_attr($url); ?>"><?php echo esc_html($url); ?></a></td>
+	                   <td class="option-description"></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Downloads listing title:</th>
+	                <td ><input type="text" size="60" name="addons_title" value="<?php echo esc_attr($addons_title); ?>" /></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Search placeholder text:</th>
+	                <td ><input type="text" size="60" name="search_placeholder_text" value="<?php echo esc_attr($searchPlaceholder); ?>" /></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Allowed file extensions (separate with comma):</th>
+	                <td ><input type="text" size="60" name="allowed_extensions" value="<?php echo esc_attr(implode(',', $allowed_extensions)); ?>" /></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row" align="left">"No screenshot" image:</th>
+	                <td><label for="upload_default_screenshot">
+	
+	                        <input id="upload_default_screenshot" type="text" size="60" name="upload_default_screenshot" value="<?php echo esc_attr($default_screenshot); ?>" />
+	                        <input id="upload_default_screenshot_button" type="button" value="Upload Image" />
+	                        <br />Enter an URL or upload an image (Size: H: 220px W: 720px)<br />
+	                        <img id="upload_default_screenshot_img" src="<?php echo esc_attr($default_screenshot); ?>" width="720" height="220" alt="Screenshot" />
+	                    </label></td>
+                    <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Add "Downloads" (<a href="<?php echo esc_attr(home_url('/cmdownloads/')); ?>">/cmdownloads</a>) to site menu:</th>
+	                <td ><input type="checkbox" name="add_addons_menu" value="1" <?php checked($add_addons_menu); ?>/></td>
+	                <td><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Add "My Downloads" (<a href="<?php echo esc_attr(home_url('/cmdownload/dashboard/')); ?>">/cmdownload/dashboard</a>) to site menu:</th>
+	                <td ><input type="checkbox" name="add_dashboard_menu" value="1" <?php checked($add_dashboard_menu); ?>/></td>
+	                <td><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
+	            </tr>
+	            <tr>
+			        <th scope="row">Force browser to download files:</th>
+			        <td ><input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_0" value="0" <?php
+					if( !$forceBrowserDownload ) echo 'checked="checked"';
+					?>/><label for="forceBrowserDownload_0"> No</label> &nbsp; <input type="radio" name="forceBrowserDownload" id="forceBrowserDownload_1" value="1" <?php
+			        if( $forceBrowserDownload ) echo 'checked="checked"';
+			        ?>/><label for="forceBrowserDownload_1"> Yes</label></td>
+			        <td>If disabled, browser will open some file types instead of downloading it, for example PDF and images.</td>
+			    </tr>
+	        </tbody></table>
+        </div>
+        
+        <div class="settings-category settings-category-notifications">
+		    <table><tbody>
+	            <tr>
+	                <th scope="row">New topic notification title:</th>
+	                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNewNotificationTitle); ?>" /></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">New topic notification message:</th>
+	                <td ><textarea cols="60" rows="5" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION; ?>"><?php echo $threadNewNotification; ?></textarea></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Topic comment notification title:</th>
+	                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNotificationTitle); ?>" /></td>
+	                <td></td>
+	            </tr>
+	            <tr>
+	                <th scope="row">Topic comment notification message:</th>
+	                <td ><textarea cols="60" rows="5" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION; ?>"><?php echo $threadNotification; ?></textarea></td>
+	                <td></td>
+	            </tr>
+	        </tbody></table>
+        </div>
+        
+        <div class="settings-category settings-category-panel-titles">
+		    <table><tbody>
+	            <?php foreach(self::$_titles as $key => $value): ?>
+	                <tr>
+	                    <th scope="row"><?php echo $key; ?></th>
+	                    <td><input type="text" size="60" name="titles[<?php echo esc_attr($key); ?>]" value="<?php echo esc_attr($value); ?>" /></td>
+	                    <td></td>
+	                </tr>
+	            <?php endforeach; ?>
+        	</tbody></table>
+       	</div>
+    </div>
+    
+    <p class="form-finalize">
 		<input type="hidden" name="nonce" value="<?php echo esc_attr(wp_create_nonce(CMDM_BaseController::ADMIN_SETTINGS)); ?>" />
-        <input type="submit" class="button" value="Update" />
+        <input type="submit" class="button button-primary" value="Update" />
+    </p>
     </form>
 </div>
