--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -20,7 +20,7 @@ if (get_option('permalink_structure') == '') {
 ?>
 
 <form method="post" enctype="multipart/form-data" id="settings">
-	<ul class="cma-settings-tabs">
+	<ul class="cmdm-settings-tabs">
 		<li><a href="#tab-general">General</a>
 		<li><a href="#tab-notifications">Notifications</a>
 		<li><a href="#tab-panel-titles">Panel Titles</a>
