--- a/views/backend/upgrade.phtml
+++ b/views/backend/upgrade.phtml
@@ -1,4 +1,4 @@
-<div class="cma-upgrade">
+<div class="cmdm-upgrade">
 	<h3>Want more? Get the PRO</h3>
 	<p>Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior,
 	adding login support from social networks, password protection and a lot more.</p>
