--- a/views/backend/upgrade.phtml
+++ b/views/backend/upgrade.phtml
@@ -2,5 +2,5 @@
 	<h3>Want more? Get the PRO</h3>
 	<p>Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior,
 	adding login support from social networks, password protection and a lot more.</p>
-	<a href="http://downloadmanager.cminds.com/" target="_blank" class="button button-primary">Upgrade to PRO</a>
+	<a href="<?php echo esc_attr(admin_url('admin.php?page='. CMDM_BaseController::ADMIN_PRO)); ?>" class="button button-primary">Upgrade to PRO</a>
 </div>
